[package]
name = "gitconf"
version = "0.1.0"
description = "Overlay utility for more convenient and flexible configuration of git"
readme = "README.md"
repository = "https://github.com/DomesticMoth/gitconf"
license = "CC0-1.0"
authors = ["DomesticMoth"]
edition = "2021"
keywords = ["git", "cli", "configuration", "profiles", "identities"]
categories = ["command-line-utilities", "config", "development-tools"]

[dependencies]
toml = "0.5.8"
log = "0.4.14"
simplelog = "0.11.2"
serde = { version = "1.0.136", features = ["derive"] }
